force-app/main/default/objects/Specification__c/fields/Backing_Material__c.field-meta.xml
<CustomField>
    <fullName>Backing_Material__c</fullName>
    <label>Backing Material</label>
    <length>20</length>
    <type>Text</type>
</CustomField>