force-app/main/default/objects/Specification__c/fields/Brand_Code__c.field-meta.xml
<CustomField>
    <fullName>Brand_Code__c</fullName>
    <label>Brand Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>