force-app/main/default/objects/Specification__c/fields/Carpet_Category__c.field-meta.xml
<CustomField>
    <fullName>Carpet_Category__c</fullName>
    <label>Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Carpet_Category</valueSetName>
    </valueSet>
</CustomField>