force-app/main/default/objects/Specification__c/fields/CDS_Design_Service__c.field-meta.xml
<CustomField>
    <fullName>CDS_Design_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CDS Design Service</label>
    <referenceTo>CDS_Design_Service__c</referenceTo>
    <relationshipLabel>Specifications</relationshipLabel>
    <relationshipName>Specifications</relationshipName>
    <type>Lookup</type>
</CustomField>