force-app/main/default/objects/Specification__c/fields/Color_Number__c.field-meta.xml
<CustomField>
    <fullName>Color_Number__c</fullName>
    <label>Color Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>