force-app/main/default/objects/Specification__c/fields/Colorization__c.field-meta.xml
<CustomField>
    <fullName>Colorization__c</fullName>
    <label>Colorization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Colorization</valueSetName>
    </valueSet>
</CustomField>