force-app/main/default/objects/Specification__c/fields/Colorway__c.field-meta.xml
<CustomField>
    <fullName>Colorway__c</fullName>
    <label>Colorway</label>
    <length>64</length>
    <type>Text</type>
</CustomField>