force-app/main/default/objects/Specification__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>not used - using Chatter on record instead</description>
    <label>Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>