force-app/main/default/objects/Specification__c/fields/Computed_Form__c.field-meta.xml
<CustomField>
    <fullName>Computed_Form__c</fullName>
    <formula>IF( Service_Construction__c  = &apos;Vinyl Wall Base&apos;  ||  Service_Construction__c  = &apos;Ceramic&apos;,  TEXT(CDS_Design_Service__r.Carpet_Type__c) ,  Form__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Computed Form</label>
    <type>Text</type>
</CustomField>