force-app/main/default/objects/Specification__c/fields/Crop_Reason__c.field-meta.xml
<CustomField>
    <fullName>Crop_Reason__c</fullName>
    <label>Crop Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full scale of section</fullName>
            </value>
            <value>
                <fullName>--None--</fullName>
                <default>true</default>
                <label>--None--</label>
            </value>
            <value>
                <fullName>Scale Up</fullName>
            </value>
            <value>
                <fullName>Scale Down</fullName>
            </value>
            <value>
                <fullName>Pattern too large</fullName>
                <isActive>false</isActive>
                <label>Pattern too large</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>