force-app/main/default/objects/Specification__c/fields/Custom_Project__c.field-meta.xml
<CustomField>
    <fullName>Custom_Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Custom Project</label>
    <referenceTo>Custom_Project__c</referenceTo>
    <relationshipLabel>Specifications</relationshipLabel>
    <relationshipName>Specifications</relationshipName>
    <type>Lookup</type>
</CustomField>