force-app/main/default/objects/Specification__c/fields/Design_Id__c.field-meta.xml
<CustomField>
    <fullName>Design_Id__c</fullName>
    <label>Design Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>