force-app/main/default/objects/Specification__c/fields/Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Dimensions__c</fullName>
    <description>W by L, in Inches</description>
    <formula>TEXT(Length__c) + &quot; X &quot; + TEXT(Width__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dimensions</label>
    <type>Text</type>
</CustomField>