force-app/main/default/objects/Specification__c/fields/EBX_Product_Path__c.field-meta.xml
<CustomField>
    <fullName>EBX_Product_Path__c</fullName>
    <description>Full path to EBX Product endpoint (without query string)</description>
    <formula>IF($Organization.Id == $Setup.Production_Org_Ids__c.Org_Id_15_char__c,
  $CustomMetadata.EBX_Integration_Setting__mdt.Production.Domain__c + $CustomMetadata.EBX_Integration_Setting__mdt.Production.Path_Product__c,
  $CustomMetadata.EBX_Integration_Setting__mdt.Test.Domain__c + $CustomMetadata.EBX_Integration_Setting__mdt.Test.Path_Product__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EBX Product Path</label>
    <type>Text</type>
</CustomField>