force-app/main/default/objects/Specification__c/fields/EBX_Product_Query_String__c.field-meta.xml
<CustomField>
    <fullName>EBX_Product_Query_String__c</fullName>
    <formula>IF(Type__c == &apos;product&apos;,
  SUBSTITUTE(
    SUBSTITUTE(
      IF($Organization.Id == $Setup.Production_Org_Ids__c.Org_Id_15_char__c,
        $CustomMetadata.EBX_Integration_Setting__mdt.Production.QueryString_Product__c,
        $CustomMetadata.EBX_Integration_Setting__mdt.Test.QueryString_Product__c
      ), &apos;{0}&apos;, Style_Number__c
    ), &apos;{1}&apos;,  Color_Number__c
  ),
  &apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EBX Product Query String</label>
    <type>Text</type>
</CustomField>