force-app/main/default/objects/Specification__c/fields/Face_Weight__c.field-meta.xml
<CustomField>
    <fullName>Face_Weight__c</fullName>
    <description>Face Weight in ounces.</description>
    <label>Face Weight</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>