force-app/main/default/objects/Specification__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <description>This is the MDM Spec Form attribute</description>
    <label>Form</label>
    <length>20</length>
    <type>Text</type>
</CustomField>