force-app/main/default/objects/Specification__c/fields/Gauge__c.field-meta.xml
<CustomField>
    <fullName>Gauge__c</fullName>
    <description>1/10, 3/32, 7/32, 5/64, etc.</description>
    <inlineHelpText>1/10, 3/32, 7/32, 5/64, etc.</inlineHelpText>
    <label>Gauge</label>
    <length>5</length>
    <type>Text</type>
</CustomField>