force-app/main/default/objects/Specification__c/fields/Gauge_Type__c.field-meta.xml
<CustomField>
    <fullName>Gauge_Type__c</fullName>
    <description>00, 2P, LL, TL, NB, MS, etc.</description>
    <label>Gauge Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>00</fullName>
            </value>
            <value>
                <fullName>2P</fullName>
            </value>
            <value>
                <fullName>LL</fullName>
            </value>
            <value>
                <fullName>MS</fullName>
            </value>
            <value>
                <fullName>NB</fullName>
            </value>
            <value>
                <fullName>TL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>