force-app/main/default/objects/Specification__c/fields/Go_To_MDM__c.field-meta.xml
<CustomField>
    <fullName>Go_To_MDM__c</fullName>
    <formula>HYPERLINK(MDM_Url__c, IF(Type__c = &apos;product&apos;, &apos;Go To EBX&apos;, &apos;Go To MSS&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edit Spec</label>
    <type>Text</type>
</CustomField>