force-app/main/default/objects/Specification__c/fields/Has_Files__c.field-meta.xml
<CustomField>
    <fullName>Has_Files__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Files</label>
    <type>Checkbox</type>
</CustomField>