force-app/main/default/objects/Specification__c/fields/Hidden_In_Project_Home__c.field-meta.xml
<CustomField>
    <fullName>Hidden_In_Project_Home__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to hide in the CDS Project Home Tree tab.</description>
    <inlineHelpText>Checking this box will hide this Specification in the CDS Project Home tab.</inlineHelpText>
    <label>Hidden In Project Home</label>
    <type>Checkbox</type>
</CustomField>