force-app/main/default/objects/Specification__c/fields/Is_Crop__c.field-meta.xml
<CustomField>
    <fullName>Is_Crop__c</fullName>
    <formula>CDS_Design_Service__r.Is_Crop__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Derived from Parent Service</inlineHelpText>
    <label>Is Crop</label>
    <type>Checkbox</type>
</CustomField>