force-app/main/default/objects/Specification__c/fields/IsAnchor__c.field-meta.xml
<CustomField>
    <fullName>IsAnchor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only applicable to Experimental specifications - this determines that this experimental may be the parent to others and not a child of any</description>
    <label>IsAnchor</label>
    <type>Checkbox</type>
</CustomField>