force-app/main/default/objects/Specification__c/fields/IsApproved__c.field-meta.xml
<CustomField>
    <fullName>IsApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this specification the approved Cad or Sample</description>
    <label>IsApproved</label>
    <type>Checkbox</type>
</CustomField>