force-app/main/default/objects/Specification__c/fields/MDM_Environment__c.field-meta.xml
<CustomField>
    <fullName>MDM_Environment__c</fullName>
    <formula>IF($Organization.Id ==  $Setup.Production_Org_Ids__c.Org_Id_15_char__c, 
  $CustomMetadata.MSS_Integration_Setting__mdt.Production.Domain__c,
  $CustomMetadata.MSS_Integration_Setting__mdt.Test.Domain__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MDM Environment</label>
    <type>Text</type>
</CustomField>