force-app/main/default/objects/Specification__c/fields/MDM_Id_Ext__c.field-meta.xml
<CustomField>
    <fullName>MDM_Id_Ext__c</fullName>
    <label>MDM Id Ext</label>
    <length>255</length>
    <type>Text</type>
</CustomField>