force-app/main/default/objects/Specification__c/fields/MDM_Key__c.field-meta.xml
<CustomField>
    <fullName>MDM_Key__c</fullName>
    <description>Key returned from EBX or MSS</description>
    <externalId>true</externalId>
    <label>Spec Key</label>
    <length>18</length>
    <type>Text</type>
</CustomField>