force-app/main/default/objects/Specification__c/fields/MDM_Url__c.field-meta.xml
<CustomField>
    <fullName>MDM_Url__c</fullName>
    <formula>IF(Type__c = &apos;product&apos;,
  EBX_Product_Path__c + &apos;?&apos; + EBX_Product_Query_String__c,
  MDM_Environment__c + &apos;/eml/CustomForm?productid=&apos; + MDM_Key__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MDM Url</label>
    <type>Text</type>
</CustomField>