force-app/main/default/objects/Specification__c/fields/Parent_MDM_Key__c.field-meta.xml
<CustomField>
    <fullName>Parent_MDM_Key__c</fullName>
    <description>Parent MDM Id received from MDM System.  Needs to be translated to ParentId in Salesforce to get correct linkage</description>
    <label>Parent MDM Key</label>
    <length>24</length>
    <type>Text</type>
</CustomField>