force-app/main/default/objects/Specification__c/fields/Parent_Specification__c.field-meta.xml
<CustomField>
    <fullName>Parent_Specification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Specification</label>
    <referenceTo>Specification__c</referenceTo>
    <relationshipLabel>Specifications</relationshipLabel>
    <relationshipName>Specifications</relationshipName>
    <type>Lookup</type>
</CustomField>