force-app/main/default/objects/Specification__c/fields/Pattern_Number__c.field-meta.xml
<CustomField>
    <fullName>Pattern_Number__c</fullName>
    <externalId>true</externalId>
    <label>Pattern #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>