force-app/main/default/objects/Specification__c/fields/Product_ID_formula__c.field-meta.xml
<CustomField>
    <fullName>Product_ID_formula__c</fullName>
    <formula>IF(RecordType.DeveloperName = &apos;Product&apos;, Style_Number__c + Color_Number__c, MDM_Key__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product ID</label>
    <type>Text</type>
</CustomField>