force-app/main/default/objects/Specification__c/fields/Public_Crop_URL__c.field-meta.xml
<CustomField>
    <fullName>Public_Crop_URL__c</fullName>
    <label>Public Crop URL</label>
    <type>Url</type>
</CustomField>