force-app/main/default/objects/Specification__c/fields/Record_Source__c.field-meta.xml
<CustomField>
    <fullName>Record_Source__c</fullName>
    <label>Record Source</label>
    <length>5</length>
    <type>Text</type>
</CustomField>