force-app/main/default/objects/Specification__c/fields/Reference_Specification__c.field-meta.xml
<CustomField>
    <fullName>Reference_Specification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is for a cloned spec and is a link to the specification that this spec was cloned from</description>
    <label>Reference Specification</label>
    <referenceTo>Specification__c</referenceTo>
    <relationshipLabel>Specifications (Reference Specification)</relationshipLabel>
    <relationshipName>Reference_Specifications</relationshipName>
    <type>Lookup</type>
</CustomField>