force-app/main/default/objects/Specification__c/fields/Selling_Company__c.field-meta.xml
<CustomField>
    <fullName>Selling_Company__c</fullName>
    <label>Selling Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Selling_Company</valueSetName>
    </valueSet>
</CustomField>