force-app/main/default/objects/Specification__c/fields/SFDC_Only_Spec__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Only_Spec__c</fullName>
    <defaultValue>false</defaultValue>
    <description>only lives in SFDC, is a clone of an existing MDM spec.</description>
    <inlineHelpText>Indicates that this Specification was created as part of a Standalone CAD/Stage. If checked, this Specification cannot be edited.</inlineHelpText>
    <label>SFDC-Only Spec</label>
    <type>Checkbox</type>
</CustomField>