force-app/main/default/objects/Specification__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Specification Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>