force-app/main/default/objects/Specification__c/fields/Step_Code_Advance__c.field-meta.xml
<CustomField>
    <fullName>Step_Code_Advance__c</fullName>
    <label>Step Code Advance</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>