force-app/main/default/objects/Specification__c/fields/Step_Code_Back__c.field-meta.xml
<CustomField>
    <fullName>Step_Code_Back__c</fullName>
    <label>Step Code Back</label>
    <length>16</length>
    <type>Text</type>
</CustomField>