force-app/main/default/objects/Specification__c/fields/Step_Code_Front__c.field-meta.xml
<CustomField>
    <fullName>Step_Code_Front__c</fullName>
    <label>Step Code Front</label>
    <length>16</length>
    <type>Text</type>
</CustomField>