force-app/main/default/objects/Specification__c/fields/Style_Number__c.field-meta.xml
<CustomField>
    <fullName>Style_Number__c</fullName>
    <label>Style Number</label>
    <length>5</length>
    <type>Text</type>
</CustomField>