force-app/main/default/objects/Specification__c/fields/Threadup_Back__c.field-meta.xml
<CustomField>
    <fullName>Threadup_Back__c</fullName>
    <label>Threadup Back</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>