force-app/main/default/objects/Specification__c/fields/Threadup_Front__c.field-meta.xml
<CustomField>
    <fullName>Threadup_Front__c</fullName>
    <label>Threadup Front</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>