force-app/main/default/objects/Specification__c/fields/Threadup_Overall__c.field-meta.xml
<CustomField>
    <fullName>Threadup_Overall__c</fullName>
    <label>Threadup Overall</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>