force-app/main/default/objects/Specification__c/fields/Thumbnail_Id__c.field-meta.xml
<CustomField>
    <fullName>Thumbnail_Id__c</fullName>
    <label>Thumbnail Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>