force-app/main/default/objects/Specification__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type received from Mdm, determines RecordType</description>
    <label>Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>