force-app/main/default/objects/Specification__c/fields/Width__c.field-meta.xml
<CustomField>
    <fullName>Width__c</fullName>
    <label>Width</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>