force-app/main/default/objects/Specification__c/fields/Workflow_State__c.field-meta.xml
<CustomField>
    <fullName>Workflow_State__c</fullName>
    <label>Workflow State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Design Complete</fullName>
            </value>
            <value>
                <fullName>Color Work Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>