force-app/main/default/objects/Specification__c/recordTypes/Cad.recordType-meta.xml
<RecordType>
    <fullName>Cad</fullName>
    <active>true</active>
    <label>Cad</label>
</RecordType>