force-app/main/default/objects/Specification__c/recordTypes/Experimental.recordType-meta.xml
<RecordType>
    <fullName>Experimental</fullName>
    <active>true</active>
    <label>Experimental</label>
</RecordType>