force-app/main/default/objects/Specification__c/recordTypes/Pattern.recordType-meta.xml
<RecordType>
    <fullName>Pattern</fullName>
    <active>true</active>
    <label>Pattern</label>
</RecordType>