force-app/main/default/objects/Specification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MDM_Key__c</columns>
    <columns>Custom_Project__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>Parent_Specification__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>notEqual</operation>
        <value>Specification__c.Product</value>
    </filters>
    <label>All</label>
</ListView>